--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,40 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.start-page-container {
+  padding: 2rem;
+  border: 4px solid green;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.game-page-container {
+  padding: 2rem;
+  border: 4px solid purple;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.result-page-container {
+  padding: 2rem;
+  border: 4px solid orangered;
+}
+
+.boxes-container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  gap: 2rem;
+  margin: 2rem;
 }
 
-.App-link {
-  color: #61dafb;
+input {
+  height: 4rem;
+  width: 4rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.submit-word-btn {
+  height: 4rem;
+  width: 4rem;
+  border: 2px solid purple;
+}
+
+button:hover {
+  cursor: pointer;
 }
