--- a/src/components/LetterInputs/LetterInputs.css
+++ b/src/components/LetterInputs/LetterInputs.css
@@ -1,31 +1,39 @@
 .boxes-container {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: flex-start;
-    gap: 2rem;
-    margin: 2rem;
-  }
-  
-  input {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    height: 4rem;
-    width: 4rem;
-    font-size: 3rem;
-    padding: .5rem;
-    border-radius: 10%;
-  }
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 2rem;
+  margin: 2rem;
+}
 
-  .submit-word-btn{
-    border-radius: 10%;
-    height: 5rem;
-    width: 8rem;
-    font-size: 1.5rem;
-    padding: .5rem;
-  }
-  .counter {
-    font-size: 1.5rem;
-  }
+input {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  height: 4rem;
+  width: 4rem;
+  font-size: 3rem;
+  padding: 0.5rem;
+  border-radius: 10%;
+}
+
+.submit-word-btn {
+  border-radius: 10%;
+  height: 5rem;
+  width: 8rem;
+  font-size: 1.5rem;
+  padding: 0.5rem;
+}
+.counter {
+  font-size: 1.5rem;
+}
+
+.correct {
+  border: 4px solid green;
+}
+
+.incorrect {
+  border: 4px solid red;
+}
