--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,23 +1,47 @@
+@import url('https://fonts.googleapis.com/css2?family=Fredoka:wght@300;400;500;600;700&family=Roboto:wght@400;500&display=swap');
+/* color palette import */
+:root {
+  --light-teal: #C7EEE4;
+  --moss-green: #ACC737;
+  --gray: #A6A6A6;
+  --dark-blue: #546FF9;
+  --dark-green: #599641;
+  --yellow: #FDDE58;
+  --red: #FF4B4B;
+}
+
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
+main {
+  height: 100vh;
+  width: 100vw;
+  font-family: 'Fredoka', sans-serif;
+}
 .start-page-container {
   padding: 2rem;
   border: 4px solid green;
+  height: 100%;
+  width: 100%;
 }
 
 .game-page-container {
-  padding: 2rem;
-  border: 4px solid purple;
+  height: 100%;
+  width: 100%;
+  padding-top: 4.5rem;
 }
+
+
 
 .result-page-container {
   padding: 2rem;
   border: 4px solid orangered;
+  height: 100%;
+  width: 100%;
 }
-
 
 button:hover {
   cursor: pointer;
