--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -2,6 +2,7 @@
 /* color palette import */
 :root {
   --light-teal: #C7EEE4;
+  --dark-teal: #69C8C2;
   --moss-green: #ACC737;
   --gray: #A6A6A6;
   --dark-blue: #546FF9;
