--- a/src/components/LetterInputs/LetterInputs.css
+++ b/src/components/LetterInputs/LetterInputs.css
@@ -11,6 +11,7 @@
   align-items: center;
   gap: 2rem;
   margin-bottom: 2rem;
+  margin-left: 11rem;
 }
 
 input {
@@ -46,4 +47,10 @@ input {
 
 .incorrect {
   border: 4px solid var(--red);
+}
+
+.feedback-message {
+  font-size: 2rem;
+  font-weight: 400;
+  color:var(--dark-blue);
 }
