Complete styling for the game page.  Add a solution for getting the seal character to appear moving horizontally across the page as the counter increases.

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -8,7 +8,10 @@
   --dark-blue: #546FF9;
   --dark-green: #599641;
   --yellow: #FDDE58;
+  --orange: #FF9600;
   --red: #FF4B4B;
+  --black: #000000;
+  
 }
 
 * {
@@ -24,7 +27,6 @@ main {
 }
 .start-page-container {
   padding: 2rem;
-  border: 4px solid green;
   height: 100%;
   width: 100%;
 }
