--- a/src/components/StartPage/StartPage.css
+++ b/src/components/StartPage/StartPage.css
@@ -1,13 +1,20 @@
 .start-page-container {
-  background-image: radial-gradient(circle, #546ff9, #009eff, #00c0f6, #73dae3, #c7eee4);
+  background-image: radial-gradient(
+    circle,
+    #546ff9,
+    #009eff,
+    #00c0f6,
+    #73dae3,
+    #c7eee4
+  );
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-evenly
+  justify-content: space-evenly;
 }
 
 h1 {
-  font-size: 100px
+  font-size: 100px;
 }
 
 .seal {
@@ -16,7 +23,7 @@ h1 {
 }
 
 h2 {
-  font-size: 45px
+  font-size: 45px;
 }
 
 .start-btn {
@@ -29,9 +36,10 @@ h2 {
   background-color: #73dae3;
 }
 .start-page-fish-container {
-  display: flex
+  display: flex;
 }
-.yellow-fish, .blue-fish {
+.yellow-fish,
+.blue-fish {
   width: 5em;
   z-index: 1;
   top: 50vh;
