--- a/src/components/ResultPage/ResultPage.css
+++ b/src/components/ResultPage/ResultPage.css
@@ -14,6 +14,10 @@
   height: 100vh;
 }
 
+.result-message {
+  font-family: "Fredoka", "sans-serif";
+}
+
 .speckle-the-seal {
   height: 35vh;
   width: 25vw;
