add color change logic so that fish change color to reflect progress through the game. Add alt text to game page.

--- a/src/components/GamePage/GamePage.css
+++ b/src/components/GamePage/GamePage.css
@@ -14,6 +14,15 @@
   justify-content: space-between;
   align-items: baseline;
 }
+.game-page-counter-container{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.game-page-fish-counter {
+  height: 2rem;
+  margin-right:.5rem;
+}
 .game-page-counter {
   font-size: 2rem;
   font-weight: 500;
