--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -6,6 +6,7 @@
   --moss-green: #acc737;
   --gray: #a6a6a6;
   --dark-blue: #546ff9;
+  --darker-blue:#0000cd;
   --dark-green: #599641;
   --yellow: #fdde58;
   --orange: #ff9600;
@@ -38,7 +39,6 @@ main {
 
 .result-page-container {
   padding: 2rem;
-  border: 4px solid orangered;
   height: 100%;
   width: 100%;
 }
