--- a/src/components/ResultPage/ResultPage.css
+++ b/src/components/ResultPage/ResultPage.css
@@ -38,8 +38,8 @@
 }
 
 .back-to-home-btn:hover {
-  background-color: #6bcad1; /* Adjusted color on hover */
-  transform: scale(1.05); /* Slightly enlarge on hover */
+  background-color: #6bcad1;
+  transform: scale(1.05);
 }
 
 .wrapper div {
