--- a/src/components/StartPage/StartPage.css
+++ b/src/components/StartPage/StartPage.css
@@ -25,7 +25,7 @@
 }
 
 .happy-seal {
-  width: 24vw;
+  width: 15vw;
 }
 
 h2 {
@@ -53,6 +53,7 @@ h2 {
   width: 100%;
   display: flex;
   justify-content: space-evenly;
+  margin-top: 3px;
 }
 
 .yellow-fish,
