--- a/src/components/ResultPage/ResultPage.css
+++ b/src/components/ResultPage/ResultPage.css
@@ -27,11 +27,10 @@
   border-radius: 30px;
   height: 6rem;
   width: 10rem;
-  font-size: 2.5rem;
+  font-size: 2rem;
   padding: 0.5rem;
   font-family: "Fredoka", "sans-serif";
   background-color: #73dae3;
-  font-size: 30px;
   cursor: pointer;
   border: none;
   transition: background-color 0.3s, transform 0.2s;
@@ -137,11 +136,63 @@ div .dot {
   left: 80%;
   animation: animate 9s linear infinite;
 }
+.wrapper div:nth-child(16) {
+  top: 90%;
+  left: 80%;
+  animation: animate 9s linear infinite;
+}
 @keyframes animate {
   0% {
     transform: scale(0) translateY(0) rotate(70deg);
   }
   100% {
     transform: scale(1.3) translateY(-100px) rotate(360deg);
+  }
+}
+
+/* mobile devices */
+@media screen and (max-width: 821px) {
+  .back-to-home-btn {
+    font-size: 2rem;
+    border-radius: 20px;
+    height: 6rem;
+  }
+}
+/* mobile devices */
+@media screen and (max-width: 425px) {
+  .back-to-home-btn {
+    font-size: 1.5rem;
+    border-radius: 20px;
+    height: 5rem;
+  }
+  .result-message {
+    font-size: 4rem;
+  }
+}
+@media screen and (max-width: 480px) and (orientation: landscape) {
+  /* Your CSS styles for phones in landscape mode go here */
+}
+@media screen and (max-height: 480px) and (orientation: landscape) {
+  .result-message {
+    font-size: 2rem;
+  }
+  .start-page-instructions {
+    font-size: 1.5rem;
+    margin-bottom: 0.5rem;
+  }
+  .start-btn {
+    font-size: 1.5rem;
+    border-radius: 10px;
+    height: 2.5rem;
+    width: 6rem;
+  }
+  .back-to-home-btn {
+    font-size: 1.5rem;
+    border-radius: 10px;
+    width: 10rem;
+    height: 2.5rem;
+  }
+  .result-page-container {
+    padding: 0.5rem;
   }
 }
