--- a/src/components/GamePage/GamePage.css
+++ b/src/components/GamePage/GamePage.css
@@ -120,25 +120,13 @@
   color: midnightblue;
 }
 
-@media screen and (max-width: 2200px) {
- .seal-body{
-  height:
- }
-}
 @media screen and (max-width: 1204px) {
   .game-page-title {
     margin-right: 0rem;
     margin-top: 4rem;
-    /* font-size: 4rem;
-    font-family: "Fredoka", "sans-serif";
-    margin-bottom: 3rem; */
   }
   .game-page-counter-container {
-  
     padding-top: 1.7rem;
-  }
-  .game-page-container{
-    padding-top: 6rem;
   }
 }
 
@@ -146,17 +134,12 @@
   .game-page-title {
     margin-top: 4rem;
     margin-bottom: 2rem;
-    /* font-size: 4rem;
-    font-family: "Fredoka", "sans-serif";
-    margin-bottom: 3rem; */
+
   }
   .game-page-counter-container {
   
     padding-top: 0rem;
   }
-  .game-page-counter {
-    /* font-size: 2.5rem; */
-}
 }
 /* ipad screen size */
 @media screen and (max-width: 821px) {
@@ -199,5 +182,47 @@
   }
   .game-page-container{
     padding-top: 2.5rem;
+  }
+}
+
+/* mobile devices */
+@media screen and (max-height: 435px) and (orientation: landscape) {
+  .game-page-container{
+    padding-top: 1rem;
+    height: 100vh;
+  }
+  .game-page-upper{
+    padding-left: 2.1rem;
+  }
+  .game-page-counter {
+    font-size: 1.5rem;
+  }
+  .game-page-fish-counter {
+    height: 1.5rem;
+    margin-right: .25rem;
+  }
+  .seal-body {
+    height: 19%;
+    top: 75vh;
+  }
+  .fish {
+    height: 6%;
+  }
+  .game-page-title {
+    margin-right: 0rem;
+    margin-top: 1rem;
+    font-size: 2.5rem;
+    margin-bottom: .5rem;
+  }
+  .game-page-lower{
+    display:flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 70vh;
+    padding-left: 0rem;
+    padding-right: 0rem;
+  }
+  .progress-line {
+    height: 4.5vh;
   }
 }
