--- a/src/components/LetterInputs/LetterInputs.css
+++ b/src/components/LetterInputs/LetterInputs.css
@@ -5,6 +5,7 @@
   justify-content: center;
   margin-bottom: 14vw;
 }
+
 .boxes-container {
   display: flex;
   flex-direction: row;
@@ -12,9 +13,9 @@
   align-items: center;
   gap: 2rem;
   margin-bottom: 2rem;
-  /* margin-left: 11rem; */
 }
-.letter-boxes-container{
+
+.letter-boxes-container {
   display: flex;
   align-items: center;
   gap: 1rem;
@@ -40,9 +41,9 @@ input {
   width: 11rem;
   font-size: 2.5rem;
   padding: 0.5rem;
-  display:flex;
+  display: flex;
   justify-content: center;
-  align-items:center;
+  align-items: center;
   font-family: "Fredoka", "sans-serif";
   background-color: var(--moss-green);
   cursor: pointer;
@@ -52,7 +53,7 @@ input {
 
 .submit-word-btn:hover {
   background-color: var(--moss-green);
-  transform: scale(1.05); 
+  transform: scale(1.05);
 }
 
 .counter {
@@ -75,48 +76,46 @@ input {
 }
 
 @media screen and (max-width: 1504px) {
- 
 }
 @media screen and (max-width: 1204px) {
   input {
     height: 6rem;
     width: 6rem;
     font-size: 4rem;
-   }
-   .submit-word-btn {
+  }
+  .submit-word-btn {
     height: 6rem;
     width: 10rem;
     font-size: 2.5rem;
     padding: 0.5rem;
-   }
+  }
 }
 @media screen and (max-width: 1000px) {
   input {
     height: 6rem;
     width: 6rem;
     font-size: 4rem;
-   }
-   .submit-word-btn {
+  }
+  .submit-word-btn {
     height: 6rem;
     width: 10rem;
     font-size: 2rem;
     padding: 0.5rem;
-   }
- 
+  }
 }
 /* ipad screen size */
 @media screen and (max-width: 821px) {
- input {
-  height: 4rem;
-  width: 4rem;
-  font-size: 3rem;
- }
- .submit-word-btn {
-  height: 4rem;
-  width: 8rem;
-  font-size: 2.2rem;
-  padding: 0.5rem;
- }
+  input {
+    height: 4rem;
+    width: 4rem;
+    font-size: 3rem;
+  }
+  .submit-word-btn {
+    height: 4rem;
+    width: 8rem;
+    font-size: 2.2rem;
+    padding: 0.5rem;
+  }
 }
 
 /* mobile devices */
@@ -125,54 +124,53 @@ input {
     height: 3rem;
     width: 3rem;
     font-size: 2rem;
-   }
-   .submit-word-btn {
+  }
+  .submit-word-btn {
     height: 3rem;
     width: 7rem;
     font-size: 2rem;
     padding: 0.5rem;
     margin-top: 1rem;
-   }
-   .boxes-container {
-    gap: .5rem;
+  }
+  .boxes-container {
+    gap: 0.5rem;
     margin-bottom: 2rem;
-    /* margin-left: 11rem; */
     flex-direction: column;
   }
-  .letter-boxes-container{
+  .letter-boxes-container {
     display: flex;
     align-items: center;
-    gap: .25rem;
+    gap: 0.25rem;
   }
   .letter-inputs-container {
     margin-bottom: 4vh;
   }
 }
+
 /* mobile devices */
-@media screen and (max-height: 435px) and (orientation:landscape){
+@media screen and (max-height: 435px) and (orientation: landscape) {
   input {
     height: 3rem;
     width: 3rem;
     font-size: 2rem;
-   }
-   .submit-word-btn {
+  }
+  .submit-word-btn {
     height: 3rem;
     width: 7rem;
     font-size: 2rem;
     padding: 0.5rem;
     margin-top: 0rem;
-   }
-   .boxes-container {
-    gap: .5rem;
-    margin-bottom: 2rem;
-    /* margin-left: 11rem; */
-    flex-direction: row;
-    align-items:center;
   }
-  .letter-boxes-container{
+  .boxes-container {
+    gap: 0.5rem;
+    margin-bottom: 2rem;
+    flex-direction: row;
+    align-items: center;
+  }
+  .letter-boxes-container {
     display: flex;
     align-items: center;
-    gap: .25rem;
+    gap: 0.25rem;
   }
   .letter-inputs-container {
     margin-bottom: 0vh;
