Fix default link styling

--- a/src/components/GamePage/GamePage.css
+++ b/src/components/GamePage/GamePage.css
@@ -25,6 +25,7 @@
   font-size: 2rem;
   font-weight: 500;
   font-family: "Fredoka", "sans-serif";
+  width: 50vw;
 }
 .game-page-title {
   margin-right: 11rem;
