--- a/src/components/StartPage/StartPage.css
+++ b/src/components/StartPage/StartPage.css
@@ -43,6 +43,7 @@
   padding: 0.5rem;
   font-family: "Fredoka", sans-serif;
   background-color: #73dae3;
+  color: black;
   border: none;
   transition: background-color 0.3s, transform 0.2s;
 }
