--- a/src/components/ResultPage/ResultPage.css
+++ b/src/components/ResultPage/ResultPage.css
@@ -31,6 +31,7 @@
   padding: 0.5rem;
   font-family: "Fredoka", "sans-serif";
   background-color: #73dae3;
+  color: black;
   cursor: pointer;
   border: none;
   transition: background-color 0.3s, transform 0.2s;
