--- a/src/components/ErrorComponent/ErrorComponent.css
+++ b/src/components/ErrorComponent/ErrorComponent.css
@@ -1,12 +1,5 @@
 .error-page {
-  background-image: radial-gradient(
-    circle,
-    #546ff9,
-    #009eff,
-    #00c0f6,
-    #73dae3,
-    #c7eee4
-  );
+  background-image: linear-gradient(0deg, #3ac6f2, #fef9d9);
   display: flex;
   flex-direction: column;
   align-items: center;
