--- a/src/components/StartPage/StartPage.css
+++ b/src/components/StartPage/StartPage.css
@@ -1,12 +1,5 @@
 .start-page-container {
-  background-image: radial-gradient(
-    circle,
-    #546ff9,
-    #009eff,
-    #00c0f6,
-    #73dae3,
-    #c7eee4
-  );
+  background-image: linear-gradient(0deg, #3ac6f2, #fef9d9);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -25,7 +18,7 @@
 }
 
 .happy-seal {
-  width: 15vw;
+  width: 20vw;
 }
 
 .start-page-instructions {
@@ -42,7 +35,7 @@
   font-size: 2.5rem;
   padding: 0.5rem;
   font-family: "Fredoka", sans-serif;
-  background-color: #73dae3;
+  background-color: #03b8c9;
   color: black;
   border: none;
   transition: background-color 0.3s, transform 0.2s;
@@ -51,23 +44,6 @@
 .start-btn:hover {
   background-color: #6bcad1;
   transform: scale(1.05); 
-}
-.start-page-fish-container {
-  width: 100%;
-  display: flex;
-  justify-content: space-evenly;
-  margin-top: 3px;
-}
-
-.yellow-fish,
-.blue-fish {
-  width: 6em;
-  z-index: 1;
-  margin: 0;
-}
-
-.blue-fish {
-  margin-left: 50px;
 }
 
 @media screen and (max-width: 1000px) {
@@ -93,7 +69,7 @@
 /* mobile devices */
 @media screen and (max-width: 425px) {
   .start-page-title {
-    font-size: 5rem;
+    font-size: 3rem;
   }
 
   .start-btn {
@@ -104,7 +80,7 @@
     margin-top: 1rem;
   }
   .start-page-instructions {
-    font-size: 1.5em;
+    font-size: 1em;
     margin-top: 1rem;
   }
 
@@ -112,22 +88,13 @@
     width: 55vw;
   }
 
-  .yellow-fish,
-  .blue-fish {
-    width: 3.5em;
-  }
-
-  .blue-fish {
-    margin-left: 0.5em;
-    margin-right: 0.5em;
-  }
   .start-page-fish-container {
     margin-top: 2rem;
   }
 }
 @media screen and (max-height: 480px) and (orientation: landscape) {
   .start-page-title {
-    font-size: 3.5rem;
+    font-size: 3rem;
   }
   .start-page-instructions {
     font-size: 1.5rem;
@@ -139,16 +106,7 @@
     height: 2.5rem;
     width: 6rem;
   }
-  .yellow-fish,
-  .blue-fish {
-    width: 3rem;
-    z-index: 1;
-    margin: 0;
-  }
-  .blue-fish {
-    margin-left: 0.5em;
-    margin-right: 0.5em;
-  }
+ 
   .happy-seal {
     width: 20vw;
     margin: 0.5rem;
@@ -164,5 +122,114 @@
     border-radius: 10px;
     width: 12rem;
     height: 3.5rem;
+  }
+}
+
+.wrapper div {
+  height: 60px;
+  width: 60px;
+  border: 2px solid rgba(255, 255, 255, 0.7);
+  border-radius: 50px;
+  position: absolute;
+  top: 10%;
+  left: 10%;
+  animation: 4s linear infinite;
+}
+
+div .dot {
+  height: 10px;
+  width: 10px;
+  border-radius: 50px;
+  background: rgba(255, 255, 255, 0.5);
+  position: absolute;
+  top: 20%;
+  right: 20%;
+}
+.wrapper div:nth-child(1) {
+  top: 20%;
+  left: 20%;
+  animation: animate 8s linear infinite;
+}
+.wrapper div:nth-child(2) {
+  top: 60%;
+  left: 80%;
+  animation: animate 10s linear infinite;
+}
+.wrapper div:nth-child(3) {
+  top: 40%;
+  left: 40%;
+  animation: animate 3s linear infinite;
+}
+.wrapper div:nth-child(4) {
+  top: 66%;
+  left: 30%;
+  animation: animate 7s linear infinite;
+}
+.wrapper div:nth-child(5) {
+  top: 90%;
+  left: 10%;
+  animation: animate 9s linear infinite;
+}
+.wrapper div:nth-child(6) {
+  top: 30%;
+  left: 60%;
+  animation: animate 5s linear infinite;
+}
+.wrapper div:nth-child(7) {
+  top: 70%;
+  left: 20%;
+  animation: animate 8s linear infinite;
+}
+.wrapper div:nth-child(8) {
+  top: 75%;
+  left: 60%;
+  animation: animate 10s linear infinite;
+}
+.wrapper div:nth-child(9) {
+  top: 50%;
+  left: 50%;
+  animation: animate 6s linear infinite;
+}
+.wrapper div:nth-child(10) {
+  top: 45%;
+  left: 20%;
+  animation: animate 10s linear infinite;
+}
+.wrapper div:nth-child(11) {
+  top: 10%;
+  left: 90%;
+  animation: animate 9s linear infinite;
+}
+.wrapper div:nth-child(12) {
+  top: 20%;
+  left: 70%;
+  animation: animate 7s linear infinite;
+}
+.wrapper div:nth-child(13) {
+  top: 20%;
+  left: 20%;
+  animation: animate 8s linear infinite;
+}
+.wrapper div:nth-child(14) {
+  top: 60%;
+  left: 5%;
+  animation: animate 6s linear infinite;
+}
+.wrapper div:nth-child(15) {
+  top: 90%;
+  left: 80%;
+  animation: animate 9s linear infinite;
+}
+.wrapper div:nth-child(16) {
+  top: 90%;
+  left: 80%;
+  animation: animate 9s linear infinite;
+}
+@keyframes animate {
+  0% {
+    transform: scale(0) translateY(0) rotate(70deg);
+  }
+  100% {
+    transform: scale(1.3) translateY(-100px) rotate(360deg);
   }
 }
